🐛 Fix issue with item overflowing

--- a/ui/blocks/sponsors-block.scss
+++ b/ui/blocks/sponsors-block.scss
@@ -3,6 +3,7 @@
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
 .sponsor-item {
+	max-width: 250px;
 	align-items: flex-start;
 	flex-direction: column;
 	--spacing-y: 0 !important;
@@ -10,4 +11,8 @@
 	--max-height: unset !important;
 	--border-radii: 4px !important;
 	gap: 1rem;
+}
+
+.sponsor-item img {
+	max-width: 200px;
 }
